# fmlisp

./: .gitignore  Cargo.toml  README.md  TODO.md  history
.clj-kondo/.cache/v1/clj/: fmlisp.core.transit.json
.lsp/.cache/: db.transit.json
docs/: architecture.md  questions.md  unless_macro.clj
src/: compiler.rs  core.rs  env.rs  error_output.rs  errors.rs  keyword.rs  lib.rs  main.rs  namespaces.rs  persinstent_list.rs  reader.rs  repl.rs  symbol.rs  traits.rs  utils.rs  values.rs  var.rs
src/fmlisp/: core.fml  string.fml  test.fml
src/lang/: commons.rs  core.rs  mod.rs  namespaces.rs  numbers.rs  strings.rs
tests/: repl_tests.rs
