[package]
name = "fmlisp"
version = "0.1.0"
edition = "2021"
authors = ["Elia Scotto"]

[[bin]]
name = "fmlisp"
path = "src/main.rs"

[dependencies]
fnv = "1.0.7"
itertools = "0.12.0"
regex = "1.10.2"
rustyline = "13.0.0"
if_chain = "1.0.2"   # to remove
dotenvy = "0.15.7"
termion = "3.0.0"
formatx = "0.2.2"
